<resources>
    <string name="app_name">SREE ALAYA CHITS</string>
    <string name="app_care_bug_log_debug">1</string>
    <!-- If value '1', should display to customer in appcare -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="get_otp">GET OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">VERIFY</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile">Mobile</string>
    <string name="title_activity_ledger">PassbookActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="payments">Payments</string>
    <string name="reports">Reports</string>
    <string name="ledger_extract">Ledger</string>
    <string name="options">Options</string>
    <string name="profile">Profile</string>
    <string name="date">Date</string>
    <string name="receipt">Receipt</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="net_total">N.Total</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="month">Mth</string>

    <string name="collection">Collection</string>
    <string name="dividend">Dvnd</string>
    <string name="net">Net</string>
    <string name="title_activity_chit">ChitActivity</string>
    <string name="title_activity_ledger_extract">LedgerExtractActivity</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="name">Name</string>
    <string name="customer_id">Customer Id</string>
    <string name="ticket_id">Ticket Id</string>
    <string name="scheme_value">Scheme Value</string>
    <string name="start_date">Start Date</string>
    <string name="duration">Duration</string>
    <string name="payment_details">Payment Details</string>
    <string name="cheque_no">Cheque No</string>
    <string name="logout">Logout</string>
    <string name="payment_request">Send Payment Request</string>
    <string name="download_statement">Download Statement</string>
    <string name="chit_request">Send New Chit Request</string>
    <string name="make_payment">Make Payment</string>

    <!--    menu main-->
    <string name="schemes">Schemes</string>
    <string name="how_chit_works">How Chit Works?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="refund_cancellation">Refund and Cancellation </string>
    <string name="contact_us">Contact Us</string>

    <string name="title_activity_schemes">SchemesActivity</string>
    <string name="title_activity_contact_acivity">ContactAcivity</string>
    <string name="chairman"><![CDATA[CHAIRMAN & MD]]></string>
    <string name="chairman_name">Rathna J Manohar</string>
    <string name="chairman_contact">6384013441</string>
    <string name="executive_director">EXECUTIVE DIRECTOR</string>
    <string name="executive_director_name">Manirathnam M</string>
    <string name="executive_director_contact">9500308071</string>
    <string name="alaya_towers">ALAYA TOWERS</string>
    <string name="office">Office</string>
    <string name="alaya_towers_contact">0421-4972728</string>
    <string name="title_activity_scheme_details">SchemeDetailsActivity</string>
    <string name="scheme_details">Scheme Details</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="subscription">Subscription</string>
    <string name="passbook">Passbook</string>
    <string name="commence_date">Commence Date</string>
    <string name="termination_date">Termination Date</string>
    <string name="no_of_chit">No of Chit / Amount</string>
    <string name="running_balance">Running Balance</string>

    <string name="pdf_show_online_dialog_title">"Processing"</string>
    <string name="pdf_show_online_dialog_question">"Question"</string>
    <string name="pdf_show_online_dialog_button_no">"No"</string>
    <string name="pdf_show_online_dialog_button_yes">"Yes"</string>

    <string name="pdf_show_local_progress_title">"local title"</string>
    <string name="pdf_show_local_progress_content">"local content"</string>



</resources>
