<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ftipinfosol.alayachits.MainActivity">
    <item
        android:id="@+id/action_schemes"
        android:orderInCategory="100"
        android:title="@string/schemes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_how_chit_works"
        android:orderInCategory="100"
        android:title="@string/how_chit_works"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacy_policy"
        android:orderInCategory="100"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_terms_conditions"
        android:orderInCategory="100"
        android:title="@string/terms_conditions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refund_cancellation"
        android:orderInCategory="100"
        android:title="@string/refund_cancellation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact_us"
        app:showAsAction="never" />
</menu>
