<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:textAlignment="center"
        android:textSize="12dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="12dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textSize="12dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/dividend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dividend"
        android:textAlignment="center"
        android:textSize="12dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textAlignment="center"
        android:textSize="12dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/net_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/net_total"
        android:textAlignment="center"
        android:textSize="12dp"
        android:layout_weight="1"/>
</LinearLayout>