<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LedgerExtract"
    tools:showIn="@layout/activity_ledger_extract">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#eee"
            android:padding="3dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dividend"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/net_total"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:layout_weight="1"/>
        </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingBottom="50dp"
                android:scrollbars="none"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>